# storage/api-docs/api-docs.json
@@ -93,6 +93,54 @@
                         "$ref": "#/components/responses/error_500"
                     }
                 }
+            },
+            "post": {
+                "tags": [
+                    "Settings"
+                ],
+                "summary": "Update site settings",
+                "description": "Update multiple settings by passing key-value pairs.",
+                "operationId": "993aba4b0ad7ce4d43289fef41286d4c",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object"
+                            },
+                            "example": {
+                                "title": "New Site Title",
+                                "language": "en"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": [],
+                        "apiKey": []
+                    }
+                ]
             }
         },
         "/api/v1/auth/user/login": {
